# src/routes/categories.routes.ts
@@ -1,9 +1,9 @@
 import { Router } from "express";
 import multer from "multer";
 
-import createCategoryController from "../modules/cars/useCases/createCategory";
-import importCategoryController from "../modules/cars/useCases/importCategory";
-import listCategoriesController from "../modules/cars/useCases/listCategories";
+import { CreateCategoryController } from "../modules/cars/useCases/createCategory/CreateCategoryController"; 
+import { ListCategoriesController } from "../modules/cars/useCases/listCategories/ListCategoriesController";
+import { ImportCategoryController } from "../modules/cars/useCases/importCategory/ImportCategoryController";
 
 const categoriesRoutes = Router();
 
@@ -11,17 +11,13 @@ const upload = multer({
   dest: "./tmp"
 })
 
+const createCategoryController = new CreateCategoryController();
+categoriesRoutes.post("/", createCategoryController.handle);
 
-categoriesRoutes.post("/", (req, res) => {
-  return createCategoryController().handle(req, res);
-});
-categoriesRoutes.get("/", (req, res) => {
-  return listCategoriesController().handle(req, res);
-})
+const listCategoriesController = new ListCategoriesController();
+categoriesRoutes.get("/", listCategoriesController.handle)
 
-categoriesRoutes.post("/import", upload.single("file"), (req, res) => {
-  return importCategoryController().handle(req, res)
-})
+const importCategoryController = new ImportCategoryController();
+categoriesRoutes.post("/import", upload.single("file"),importCategoryController.handle)
 
-export { categoriesRoutes };
-
+export { categoriesRoutes }; 
